# rsflix

./: Cargo.toml  rustflix.db
migrations/2023-03-04-050014_videos/: up.sql
src/: args.rs  db.rs  main.rs  models.rs  ops.rs  schema.rs
src/ops/: video_ops.rs
