[package]
name = "rustflix"
version = "0.1.0"
edition = "2018"
publis="false"
authors= ["Damith Dilhan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
diesel = { version = "^2.0.0", features = ["sqlite"] }
dotenv = "0.15"
clap = { version = "3.1.9", features = ["derive"] }
